Fix the twitter picker alignment in the filter menu

--- a/src/components/adminSettingsPanel/eventSettings/style.scss
+++ b/src/components/adminSettingsPanel/eventSettings/style.scss
@@ -42,5 +42,8 @@
 
 .twitter-picker {
     box-shadow:none !important;
+}
+
+.the-colour-picker .twitter-picker {
     margin-left: auto;
 }
